--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.3",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
